Bug #43438
cephfs-journal-tool: will crash without any extra argument
% Done:
0%
Source:
Development
Tags:
Backport:
nautilus,mimic
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
tools
Labels (FS):
crash
Pull request ID:
Crash signature:
Description
# ./bin/cephfs-journal-tool --rank=a:0 event
It will crash:
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
Core was generated by `./bin/cephfs-journal-tool --rank=a:0 event'.
Program terminated with signal SIGSEGV, Segmentation fault.
#0 0x00007fd38c3cdd05 in raise () from /lib64/libpthread.so.0
[Current thread is 1 (Thread 0x7fd38bd2dc80 (LWP 14077))]
Missing separate debuginfos, use: dnf debuginfo-install fmt-5.2.1-2.fc30.x86_64 glibc-2.29-9.fc30.x86_64 gperftools-libs-2.7-5.fc30.x86_64 libblkid-2.33.2-2.fc30.x86_64 libgcc-9.2.1-1.fc30.x86_64 libibverbs-20.1-3.fc30.x86_64 libnl3-3.4.0-8.fc30.x86_64 librdmacm-20.1-3.fc30.x86_64 libstdc++-9.2.1-1.fc30.x86_64 libunwind-1.3.1-2.fc30.x86_64 libuuid-2.33.2-2.fc30.x86_64 lttng-ust-2.10.2-2.fc30.x86_64 openssl-libs-1.1.1d-2.fc30.x86_64 systemd-libs-241-12.git323cdf4.fc30.x86_64 userspace-rcu-0.10.1-5.fc30.x86_64 zlib-1.2.11-15.fc30.x86_64
(gdb)
(gdb) bt
#0 0x00007fd38c3cdd05 in raise () from /lib64/libpthread.so.0
#1 0x0000559ef43e192e in reraise_fatal (signum=11) at /data1/ceph/src/global/signal_handler.cc:81
#2 0x0000559ef43e29f3 in handle_fatal_signal (signum=11) at /data1/ceph/src/global/signal_handler.cc:326
#3 <signal handler called>
#4 0x0000559ef3d642f0 in JournalTool::main_event (this=0x7ffcafbb9d10, argv=std::vector of length 0, capacity 0) at /data1/ceph/src/tools/cephfs/JournalTool.cc:372
#5 0x0000559ef3d61fcf in JournalTool::main (this=0x7ffcafbb9d10, argv=std::vector of length 0, capacity 2) at /data1/ceph/src/tools/cephfs/JournalTool.cc:181
#6 0x0000559ef3d5c2fa in main (argc=3, argv=0x7ffcafbba078) at /data1/ceph/src/tools/cephfs/cephfs-journal-tool.cc:51
Related issues
History
#1 Updated by Xiubo Li about 1 year ago
- Status changed from New to In Progress
#2 Updated by Xiubo Li about 1 year ago
The fixing PR: https://github.com/ceph/ceph/pull/32452
#3 Updated by Xiubo Li about 1 year ago
- Status changed from In Progress to Fix Under Review
#4 Updated by Patrick Donnelly about 1 year ago
- Target version set to v15.0.0
- Source set to Development
- Backport set to nautilus,mimic
- Pull request ID set to 32452
#5 Updated by Patrick Donnelly about 1 year ago
- Status changed from Fix Under Review to Pending Backport
#6 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #43572: mimic: cephfs-journal-tool: will crash without any extra argument added
#7 Updated by Nathan Cutler about 1 year ago
- Copied to Backport #43573: nautilus: cephfs-journal-tool: will crash without any extra argument added
#8 Updated by Nathan Cutler 8 months ago
- Status changed from Pending Backport to Resolved
While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".