cephfs-journal-tool: fix crash with empty argv

If the argument is empty, it will be better to give a hint
instead of crashing.

Fixes: https://tracker.ceph.com/issues/43438

Signed-off-by: Xiubo Li <xiubli@redhat.com>